@@ -416,6 +416,22 @@ name|hadoop
 operator|.
 name|io
 operator|.
+name|SequenceFile
+operator|.
+name|Reader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
 name|Text
 import|;
 end_import
@@ -445,6 +461,22 @@ operator|.
 name|io
 operator|.
 name|WritableComparable
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|SequenceFile
+operator|.
+name|Writer
 import|;
 end_import
 
@@ -713,6 +745,22 @@ operator|.
 name|util
 operator|.
 name|ToolRunner
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|util
+operator|.
+name|StringUtils
+operator|.
+name|TraditionalBinaryPrefix
 import|;
 end_import
 
@@ -1813,29 +1861,29 @@ operator|.
 name|getLen
 argument_list|()
 decl_stmt|;
+try|try
+init|(
 name|SequenceFile
 operator|.
 name|Reader
 name|sl
 init|=
-literal|null
-decl_stmt|;
-try|try
-block|{
-name|sl
-operator|=
 operator|new
 name|SequenceFile
 operator|.
 name|Reader
 argument_list|(
-name|fs
-argument_list|,
-name|src
-argument_list|,
 name|job
+argument_list|,
+name|Reader
+operator|.
+name|file
+argument_list|(
+name|src
 argument_list|)
-expr_stmt|;
+argument_list|)
+init|)
+block|{
 for|for
 control|(
 init|;
@@ -1923,14 +1971,6 @@ name|get
 argument_list|()
 expr_stmt|;
 block|}
-block|}
-finally|finally
-block|{
-name|checkAndClose
-argument_list|(
-name|sl
-argument_list|)
-expr_stmt|;
 block|}
 if|if
 condition|(
@@ -2583,23 +2623,11 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|FSDataInputStream
-name|in
-init|=
-literal|null
-decl_stmt|;
-name|FSDataOutputStream
-name|out
-init|=
-literal|null
-decl_stmt|;
 name|long
 name|bytesCopied
 init|=
 literal|0L
 decl_stmt|;
-try|try
-block|{
 name|Path
 name|srcPath
 init|=
@@ -2609,8 +2637,11 @@ name|getPath
 argument_list|()
 decl_stmt|;
 comment|// open src file
+try|try
+init|(
+name|FSDataInputStream
 name|in
-operator|=
+init|=
 name|srcPath
 operator|.
 name|getFileSystem
@@ -2622,7 +2653,8 @@ name|open
 argument_list|(
 name|srcPath
 argument_list|)
-expr_stmt|;
+init|)
+block|{
 name|reporter
 operator|.
 name|incrCounter
@@ -2638,8 +2670,11 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 comment|// open tmp file
+try|try
+init|(
+name|FSDataOutputStream
 name|out
-operator|=
+init|=
 name|create
 argument_list|(
 name|tmpfile
@@ -2648,7 +2683,8 @@ name|reporter
 argument_list|,
 name|srcstat
 argument_list|)
-expr_stmt|;
+init|)
+block|{
 name|LOG
 operator|.
 name|info
@@ -2727,23 +2763,31 @@ name|absdst
 operator|+
 literal|" [ "
 operator|+
-name|StringUtils
+name|TraditionalBinaryPrefix
 operator|.
-name|humanReadableInt
+name|long2String
 argument_list|(
 name|bytesCopied
+argument_list|,
+literal|""
+argument_list|,
+literal|1
 argument_list|)
 operator|+
 literal|" / "
 operator|+
-name|StringUtils
+name|TraditionalBinaryPrefix
 operator|.
-name|humanReadableInt
+name|long2String
 argument_list|(
 name|srcstat
 operator|.
 name|getLen
 argument_list|()
+argument_list|,
+literal|""
+argument_list|,
+literal|1
 argument_list|)
 operator|+
 literal|" ]"
@@ -2751,24 +2795,12 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-finally|finally
-block|{
-name|checkAndClose
-argument_list|(
-name|in
-argument_list|)
-expr_stmt|;
-name|checkAndClose
-argument_list|(
-name|out
-argument_list|)
-expr_stmt|;
 block|}
 return|return
 name|bytesCopied
 return|;
 block|}
-comment|/**      * Copy a file to a destination.      * @param srcstat src path and metadata      * @param dstpath dst path      * @param reporter      * @throws IOException if copy fails(even if the validation of copy fails)      */
+comment|/**      * Copy a file to a destination.      * @param srcstat src path and metadata      * @param relativedst relative dst path      * @param outc Log of skipped files      * @param reporter      * @throws IOException if copy fails(even if the validation of copy fails)      */
 DECL|method|copy (FileStatus srcstat, Path relativedst, OutputCollector<WritableComparable<?>, Text> outc, Reporter reporter)
 specifier|private
 name|void
@@ -3300,11 +3332,15 @@ name|b
 operator|+
 literal|" bytes ("
 operator|+
-name|StringUtils
+name|TraditionalBinaryPrefix
 operator|.
-name|humanReadableInt
+name|long2String
 argument_list|(
 name|b
+argument_list|,
+literal|""
+argument_list|,
+literal|1
 argument_list|)
 operator|+
 literal|")"
@@ -4406,7 +4442,7 @@ name|unglobbed
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Driver to copy srcPath to destPath depending on required protocol.    * @param args arguments    */
+comment|/**    * Driver to copy srcPath to destPath depending on required protocol.    * @param conf configuration    * @param args arguments    */
 DECL|method|copy (final Configuration conf, final Arguments args )
 specifier|static
 name|void
@@ -4918,34 +4954,29 @@ name|DST_DIR_LIST_LABEL
 argument_list|)
 argument_list|)
 decl_stmt|;
+try|try
+init|(
 name|SequenceFile
 operator|.
 name|Reader
 name|in
 init|=
-literal|null
-decl_stmt|;
-try|try
-block|{
-name|in
-operator|=
 operator|new
 name|SequenceFile
 operator|.
 name|Reader
 argument_list|(
-name|dstdirlist
+name|jobconf
+argument_list|,
+name|Reader
 operator|.
-name|getFileSystem
+name|file
 argument_list|(
-name|jobconf
-argument_list|)
-argument_list|,
 name|dstdirlist
-argument_list|,
-name|jobconf
 argument_list|)
-expr_stmt|;
+argument_list|)
+init|)
+block|{
 name|Text
 name|dsttext
 init|=
@@ -5006,14 +5037,6 @@ name|dstfs
 argument_list|)
 expr_stmt|;
 block|}
-block|}
-finally|finally
-block|{
-name|checkAndClose
-argument_list|(
-name|in
-argument_list|)
-expr_stmt|;
 block|}
 block|}
 DECL|class|Arguments
@@ -5077,7 +5100,7 @@ specifier|final
 name|boolean
 name|dryrun
 decl_stmt|;
-comment|/**      * Arguments for distcp      * @param srcs List of source paths      * @param basedir Base directory for copy      * @param dst Destination path      * @param log Log output directory      * @param flags Command-line flags      * @param preservedAttributes Preserved attributes       * @param filelimit File limit      * @param sizelimit Size limit      */
+comment|/**      * Arguments for distcp      * @param srcs List of source paths      * @param basedir Base directory for copy      * @param dst Destination path      * @param log Log output directory      * @param flags Command-line flags      * @param preservedAttributes Preserved attributes       * @param filelimit File limit      * @param sizelimit Size limit      * @param mapredSslConf ssl configuration      * @param dryrun      */
 DECL|method|Arguments (List<Path> srcs, Path basedir, Path dst, Path log, EnumSet<Options> flags, String preservedAttributes, long filelimit, long sizelimit, String mapredSslConf, boolean dryrun)
 name|Arguments
 parameter_list|(
@@ -7524,25 +7547,43 @@ name|SequenceFile
 operator|.
 name|createWriter
 argument_list|(
-name|jobfs
-argument_list|,
 name|jobConf
 argument_list|,
+name|Writer
+operator|.
+name|file
+argument_list|(
 name|srcfilelist
+argument_list|)
 argument_list|,
+name|Writer
+operator|.
+name|keyClass
+argument_list|(
 name|LongWritable
 operator|.
 name|class
+argument_list|)
 argument_list|,
+name|Writer
+operator|.
+name|valueClass
+argument_list|(
 name|FilePair
 operator|.
 name|class
+argument_list|)
 argument_list|,
+name|Writer
+operator|.
+name|compression
+argument_list|(
 name|SequenceFile
 operator|.
 name|CompressionType
 operator|.
 name|NONE
+argument_list|)
 argument_list|)
 init|;
 name|SequenceFile
@@ -7554,25 +7595,43 @@ name|SequenceFile
 operator|.
 name|createWriter
 argument_list|(
-name|jobfs
-argument_list|,
 name|jobConf
 argument_list|,
+name|Writer
+operator|.
+name|file
+argument_list|(
 name|dstfilelist
+argument_list|)
 argument_list|,
+name|Writer
+operator|.
+name|keyClass
+argument_list|(
 name|Text
 operator|.
 name|class
+argument_list|)
 argument_list|,
+name|Writer
+operator|.
+name|valueClass
+argument_list|(
 name|Text
 operator|.
 name|class
+argument_list|)
 argument_list|,
+name|Writer
+operator|.
+name|compression
+argument_list|(
 name|SequenceFile
 operator|.
 name|CompressionType
 operator|.
 name|NONE
+argument_list|)
 argument_list|)
 init|;
 name|SequenceFile
@@ -7584,26 +7643,45 @@ name|SequenceFile
 operator|.
 name|createWriter
 argument_list|(
-name|jobfs
-argument_list|,
 name|jobConf
 argument_list|,
+name|Writer
+operator|.
+name|file
+argument_list|(
 name|dstdirlist
+argument_list|)
 argument_list|,
+name|Writer
+operator|.
+name|keyClass
+argument_list|(
 name|Text
 operator|.
 name|class
+argument_list|)
 argument_list|,
+name|Writer
+operator|.
+name|valueClass
+argument_list|(
 name|FilePair
 operator|.
 name|class
+argument_list|)
 argument_list|,
+name|Writer
+operator|.
+name|compression
+argument_list|(
 name|SequenceFile
 operator|.
 name|CompressionType
 operator|.
 name|NONE
 argument_list|)
+argument_list|)
+init|;
 init|)
 block|{
 comment|// handle the case where the destination directory doesn't exist
@@ -7679,6 +7757,14 @@ operator|.
 name|makeQualified
 argument_list|(
 name|basefs
+operator|.
+name|getUri
+argument_list|()
+argument_list|,
+name|basefs
+operator|.
+name|getWorkingDirectory
+argument_list|()
 argument_list|)
 expr_stmt|;
 if|if
@@ -7838,6 +7924,14 @@ operator|.
 name|makeQualified
 argument_list|(
 name|srcfs
+operator|.
+name|getUri
+argument_list|()
+argument_list|,
+name|srcfs
+operator|.
+name|getWorkingDirectory
+argument_list|()
 argument_list|)
 decl_stmt|;
 while|while
@@ -8618,11 +8712,15 @@ name|info
 argument_list|(
 literal|"bytesToCopyCount="
 operator|+
-name|StringUtils
+name|TraditionalBinaryPrefix
 operator|.
-name|humanReadableInt
+name|long2String
 argument_list|(
 name|byteCount
+argument_list|,
+literal|""
+argument_list|,
+literal|1
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -8646,11 +8744,15 @@ name|info
 argument_list|(
 literal|"bytesToSkipCopyCount="
 operator|+
-name|StringUtils
+name|TraditionalBinaryPrefix
 operator|.
-name|humanReadableInt
+name|long2String
 argument_list|(
 name|skipByteCount
+argument_list|,
+literal|""
+argument_list|,
+literal|1
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -8925,11 +9027,15 @@ name|info
 argument_list|(
 literal|"bytesToCopyCount="
 operator|+
-name|StringUtils
+name|TraditionalBinaryPrefix
 operator|.
-name|humanReadableInt
+name|long2String
 argument_list|(
 name|byteCount
+argument_list|,
+literal|""
+argument_list|,
+literal|1
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -9198,6 +9304,8 @@ argument_list|,
 literal|"_distcp_dst_lsr"
 argument_list|)
 decl_stmt|;
+try|try
+init|(
 specifier|final
 name|SequenceFile
 operator|.
@@ -9208,28 +9316,45 @@ name|SequenceFile
 operator|.
 name|createWriter
 argument_list|(
-name|jobfs
-argument_list|,
 name|jobconf
 argument_list|,
+name|Writer
+operator|.
+name|file
+argument_list|(
 name|dstlsr
+argument_list|)
 argument_list|,
+name|Writer
+operator|.
+name|keyClass
+argument_list|(
 name|Text
 operator|.
 name|class
+argument_list|)
 argument_list|,
+name|Writer
+operator|.
+name|valueClass
+argument_list|(
 name|NullWritable
 operator|.
 name|class
+argument_list|)
 argument_list|,
+name|Writer
+operator|.
+name|compression
+argument_list|(
 name|SequenceFile
 operator|.
 name|CompressionType
 operator|.
 name|NONE
 argument_list|)
-decl_stmt|;
-try|try
+argument_list|)
+init|)
 block|{
 comment|//do lsr to get all file statuses in dstroot
 specifier|final
@@ -9339,14 +9464,6 @@ block|}
 block|}
 block|}
 block|}
-finally|finally
-block|{
-name|checkAndClose
-argument_list|(
-name|writer
-argument_list|)
-expr_stmt|;
-block|}
 comment|//sort lsr results
 specifier|final
 name|Path
@@ -9399,41 +9516,36 @@ name|sortedlsr
 argument_list|)
 expr_stmt|;
 comment|//compare lsr list and dst list
-name|SequenceFile
-operator|.
-name|Reader
-name|lsrin
-init|=
-literal|null
-decl_stmt|;
-name|SequenceFile
-operator|.
-name|Reader
-name|dstin
-init|=
-literal|null
-decl_stmt|;
 name|long
 name|deletedPathsCount
 init|=
 literal|0
 decl_stmt|;
 try|try
-block|{
+init|(
+name|SequenceFile
+operator|.
+name|Reader
 name|lsrin
-operator|=
+init|=
 operator|new
 name|SequenceFile
 operator|.
 name|Reader
 argument_list|(
-name|jobfs
-argument_list|,
-name|sortedlsr
-argument_list|,
 name|jobconf
+argument_list|,
+name|Reader
+operator|.
+name|file
+argument_list|(
+name|sortedlsr
 argument_list|)
-expr_stmt|;
+argument_list|)
+init|;
+name|SequenceFile
+operator|.
+name|Reader
 name|dstin
 operator|=
 operator|new
@@ -9441,13 +9553,17 @@ name|SequenceFile
 operator|.
 name|Reader
 argument_list|(
-name|jobfs
-argument_list|,
-name|dstsorted
-argument_list|,
 name|jobconf
+argument_list|,
+name|Reader
+operator|.
+name|file
+argument_list|(
+name|dstsorted
 argument_list|)
-expr_stmt|;
+argument_list|)
+init|)
+block|{
 comment|//compare sorted lsr list and sorted dst list
 specifier|final
 name|Text
@@ -9658,19 +9774,6 @@ block|}
 block|}
 block|}
 block|}
-finally|finally
-block|{
-name|checkAndClose
-argument_list|(
-name|lsrin
-argument_list|)
-expr_stmt|;
-name|checkAndClose
-argument_list|(
-name|dstin
-argument_list|)
-expr_stmt|;
-block|}
 return|return
 name|deletedPathsCount
 return|;
@@ -9775,15 +9878,6 @@ name|IOException
 block|{
 name|SequenceFile
 operator|.
-name|Reader
-name|in
-init|=
-literal|null
-decl_stmt|;
-try|try
-block|{
-name|SequenceFile
-operator|.
 name|Sorter
 name|sorter
 init|=
@@ -9820,20 +9914,29 @@ argument_list|,
 name|sorted
 argument_list|)
 expr_stmt|;
+try|try
+init|(
+name|SequenceFile
+operator|.
+name|Reader
 name|in
-operator|=
+init|=
 operator|new
 name|SequenceFile
 operator|.
 name|Reader
 argument_list|(
-name|fs
-argument_list|,
-name|sorted
-argument_list|,
 name|conf
+argument_list|,
+name|Reader
+operator|.
+name|file
+argument_list|(
+name|sorted
 argument_list|)
-expr_stmt|;
+argument_list|)
+init|)
+block|{
 name|Text
 name|prevdst
 init|=
@@ -9920,69 +10023,6 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
-finally|finally
-block|{
-name|checkAndClose
-argument_list|(
-name|in
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-DECL|method|checkAndClose (java.io.Closeable io)
-specifier|static
-name|boolean
-name|checkAndClose
-parameter_list|(
-name|java
-operator|.
-name|io
-operator|.
-name|Closeable
-name|io
-parameter_list|)
-block|{
-if|if
-condition|(
-name|io
-operator|!=
-literal|null
-condition|)
-block|{
-try|try
-block|{
-name|io
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|ioe
-parameter_list|)
-block|{
-name|LOG
-operator|.
-name|warn
-argument_list|(
-name|StringUtils
-operator|.
-name|stringifyException
-argument_list|(
-name|ioe
-argument_list|)
-argument_list|)
-expr_stmt|;
-return|return
-literal|false
-return|;
-block|}
-block|}
-return|return
-literal|true
-return|;
 block|}
 comment|/** An exception class for duplicated source files. */
 DECL|class|DuplicationException
