@@ -499,6 +499,9 @@ Release 2.7.0 - UNRELEASED
 
     HADOOP-11419 Improve hadoop-maven-plugins. (Herve Boutemy via stevel)
 
+    HADOOP-11450. Cleanup DistCpV1 not to use deprecated methods and fix
+    javadocs. (Varun Saxena via ozawa)
+
   OPTIMIZATIONS
 
     HADOOP-11323. WritableComparator#compare keeps reference to byte array.
